// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select default 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0.25rem;
  border-color: #C1C6CC;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;base64,dGVzdC1maWxlLXN0dWI='), linear-gradient(to bottom,#FFFFFF 0%,#FFFFFF 100%);
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0::-ms-expand {
  display: none;
}

<select
  className="c0 c1"
>
  <option
    value=""
  />
</select>
`;

exports[`Select should accept disabled 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0.25rem;
  border-color: #C1C6CC;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;base64,dGVzdC1maWxlLXN0dWI='), linear-gradient(to bottom,#FFFFFF 0%,#FFFFFF 100%);
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0::-ms-expand {
  display: none;
}

<select
  className="c0 c1"
  disabled={true}
>
  <option
    value=""
  />
</select>
`;

exports[`Select should accept empty options array 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0.25rem;
  border-color: #C1C6CC;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;base64,dGVzdC1maWxlLXN0dWI='), linear-gradient(to bottom,#FFFFFF 0%,#FFFFFF 100%);
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0::-ms-expand {
  display: none;
}

<select
  className="c0 c1"
>
  <option
    value=""
  />
</select>
`;

exports[`Select should accept readOnly 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0.25rem;
  border-color: #C1C6CC;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;base64,dGVzdC1maWxlLXN0dWI='), linear-gradient(to bottom,#FFFFFF 0%,#FFFFFF 100%);
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0::-ms-expand {
  display: none;
}

<select
  className="c0 c1"
  readOnly={true}
>
  <option
    value=""
  />
</select>
`;

exports[`Select should accept required 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0.25rem;
  border-color: #C1C6CC;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;base64,dGVzdC1maWxlLXN0dWI='), linear-gradient(to bottom,#FFFFFF 0%,#FFFFFF 100%);
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0::-ms-expand {
  display: none;
}

<select
  className="c0 c1"
  required={true}
>
  <option
    value=""
  />
</select>
`;

exports[`Select with a placeholder 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0.25rem;
  border-color: #C1C6CC;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;base64,dGVzdC1maWxlLXN0dWI='), linear-gradient(to bottom,#FFFFFF 0%,#FFFFFF 100%);
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0::-ms-expand {
  display: none;
}

<select
  className="c0 c1"
>
  <option
    value=""
  >
    I am a placeholder
  </option>
</select>
`;

exports[`Select with a value 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0.25rem;
  border-color: #C1C6CC;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;base64,dGVzdC1maWxlLXN0dWI='), linear-gradient(to bottom,#FFFFFF 0%,#FFFFFF 100%);
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0::-ms-expand {
  display: none;
}

<select
  className="c0 c1"
  defaultValue="Some Value"
>
  <option
    value=""
  />
  <option
    value="1"
  >
    thing
  </option>
  <option
    value="Some Value"
  >
    Some Value's Label
  </option>
  <option
    value="2"
  >
    other
  </option>
</select>
`;

exports[`Select with an error validation 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0.25rem;
  border-color: #C1C6CC;
  background-color: #FFF2F4;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;base64,dGVzdC1maWxlLXN0dWI='), linear-gradient(to bottom,#FFFFFF 0%,#FFFFFF 100%);
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0::-ms-expand {
  display: none;
}

<select
  className="c0 c1"
>
  <option
    value=""
  />
</select>
`;

exports[`Select with aria-describedby 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0.25rem;
  border-color: #C1C6CC;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;base64,dGVzdC1maWxlLXN0dWI='), linear-gradient(to bottom,#FFFFFF 0%,#FFFFFF 100%);
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0::-ms-expand {
  display: none;
}

<select
  aria-describedby="some-id"
  className="c0 c1"
>
  <option
    value=""
  />
</select>
`;

exports[`Select with name and id 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0.25rem;
  border-color: #C1C6CC;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('data:image/svg+xml;base64,dGVzdC1maWxlLXN0dWI='), linear-gradient(to bottom,#FFFFFF 0%,#FFFFFF 100%);
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0::-ms-expand {
  display: none;
}

<select
  className="c0 c1"
  id="Bobby"
  name="Bob"
>
  <option
    value=""
  />
</select>
`;
